--- a/src/SplitBackApi/SplitBackApi.csproj
+++ b/src/SplitBackApi/SplitBackApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>2212.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
