--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,14 +1,11 @@
 name: .NET
 
-on:
-  # push:
-  #   branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
 jobs:
-  build:
+  build-and-test:
     name: Build and test
+    on:
+      pull_request:
+        branches: [ "master" ]
     runs-on: ubuntu-latest
     # env:
     #   VERSION_SCRIPT: ./.github/workflows/scripts/increment-version-dotnet.sh
@@ -29,3 +26,4 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      
