--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Print current branch
+      run: git rev-parse --abbrev-ref HEAD
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
