--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Print current branch
-      run: git rev-parse --abbrev-ref HEAD
+      run: echo running on branch ${GITHUB_REF##*/}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
