--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -8,10 +8,12 @@ jobs:
   build-test:
     name: Build and test
     runs-on: ubuntu-latest
+    env:
+      BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
     steps:
     - uses: actions/checkout@v3
     - name: Print current branch
-      run: echo Current branch ${{ github.head_ref }}
+      run: echo Current branch ${{ env.BRANCH_NAME }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
