--- a/.github/workflows/dotnet-increment-version.yml
+++ b/.github/workflows/dotnet-increment-version.yml
@@ -25,6 +25,6 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add .
-        git commit -m "Version change"
+        git commit -m "Version change [skip ci]"
         echo https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
         git push https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
