--- a/.github/workflows/dotnet-build-test.yml
+++ b/.github/workflows/dotnet-build-test.yml
@@ -3,6 +3,8 @@ name: dotnet-build-test
 on:
   pull_request:
     branches: [ "master" ]
+    paths-ignore:
+      - '.github/**'
 
 jobs:
   build-test:
