--- a/.github/workflows/dotnet-increment-version.yml
+++ b/.github/workflows/dotnet-increment-version.yml
@@ -14,8 +14,8 @@ jobs:
       BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
     steps:
     - uses: actions/checkout@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+      # with:
+      #   token: ${{ secrets.GITHUB_TOKEN }}
     - name: Print current branch
       run: echo ${{ env.BRANCH_NAME }}
     - name: Increment version in .csproj
