--- a/.github/workflows/dotnet-increment-version.yml
+++ b/.github/workflows/dotnet-increment-version.yml
@@ -26,5 +26,5 @@ jobs:
         git config user.email github-actions@github.com
         git add .
         git commit -m "Version change [skip ci]"
-        echo https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
-        git push --force https://${GITHUB_ACTOR}:${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git
+        echo https://${GITHUB_ACTOR}:${{ secrets.THANOSKAT_PAT }}@github.com/${GITHUB_REPOSITORY}.git
+        git push --force https://${GITHUB_ACTOR}:${{ secrets.THANOSKAT_PAT }}@github.com/${GITHUB_REPOSITORY}.git
