--- a/.github/workflows/dotnet-increment-version.yml
+++ b/.github/workflows/dotnet-increment-version.yml
@@ -25,6 +25,5 @@ jobs:
         git config user.name github-actions
         git config user.email github-actions@github.com
         git add .
-        git commit -m "Version change [skip ci]"
-        echo https://${GITHUB_ACTOR}:${{ secrets.THANOSKAT_PAT }}@github.com/${GITHUB_REPOSITORY}.git
-        git push --force https://${GITHUB_ACTOR}:${{ secrets.THANOSKAT_PAT }}@github.com/${GITHUB_REPOSITORY}.git
+        git commit -m "Version change"
+        git push
