--- a/.github/workflows/dotnet-bump-version.yml
+++ b/.github/workflows/dotnet-bump-version.yml
@@ -1,15 +1,15 @@
-name: dotnet-increment-version
+name: dotnet-bump-version
 
 on:
   push:
     branches: [ "master" ]
 
 jobs:
-  version-increment:
-    name: Increment Version
+  version-bump:
+    name: Bump Version
     runs-on: ubuntu-latest
     env:
-      VERSION_SCRIPT: ./.github/workflows/scripts/increment-version-dotnet.sh
+      VERSION_SCRIPT: ./.github/workflows/scripts/bump-version-dotnet.sh
       CSPROJ_LOCATION: ./src/SplitBackApi/SplitBackApi.csproj
       BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
     steps:
@@ -18,7 +18,7 @@ jobs:
         token: ${{ secrets.THANOSKAT_PAT }}
     - name: Print current branch
       run: echo ${{ env.BRANCH_NAME }}
-    - name: Increment version in .csproj
+    - name: Bump version in .csproj
       run: |
         chmod +x ${{ env.VERSION_SCRIPT }}
         ${{ env.VERSION_SCRIPT }} ${{ env.CSPROJ_LOCATION }}
