setup app settings

--- a/src/SplitBackApi/appsettings.Development.json
+++ b/src/SplitBackApi/appsettings.Development.json
@@ -1,4 +1,25 @@
 {
+  "App": {
+    "MongoDb": {
+      "Database": {
+        "Name": "splitDB",
+        "Collections": {
+          "Groups": "groups",
+          "Expenses": "expenses",
+          "Users": "users",
+          "Invitations": "invitations",
+          "Sessions": "sessions",
+          "Actions": "actions"
+        }
+      },
+      "ConnectionString": "mongodb+srv://dbSplitUser:1423qrwe@cluster0.mqehg.mongodb.net/db1?retryWrites=true&w=majority"
+    },
+    "Jwt": {
+      "Issuer": "localhost",
+      "Audience": "localhost",
+      "Key": "enaduotriatesserapenteeksi"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
