Config Options pattern

--- a/src/SplitBackApi/appsettings.Development.json
+++ b/src/SplitBackApi/appsettings.Development.json
@@ -2,7 +2,7 @@
   "App": {
     "MongoDb": {
       "Database": {
-        "Name": "splitDB",
+        "Name": "db-thanos",
         "Collections": {
           "Groups": "groups",
           "Expenses": "expenses",
