--- a/.gitignore
+++ b/.gitignore
@@ -475,3 +475,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+**/appsettings.Development.json
+**/appsettings.Staging.json
+**/appsettings.Production.json
