--- a/src/SplitBackApi/SplitBackApi.csproj
+++ b/src/SplitBackApi/SplitBackApi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <Version>2302.2</Version>
   </PropertyGroup>
