--- a/.github/workflows/dotnet-checkout-tag.yml
+++ b/.github/workflows/dotnet-checkout-tag.yml
@@ -10,8 +10,54 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    
+    env:
+      DOTNET_VERSION: 7.0
+      DOCKER_IMAGE_NAME: my-awesome-app
+      
     steps:
+      # Checkout the code in tag
       - name: Checkout
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.tag }}
+          token: ${{ secrets.ADMIN_TOKEN }}
+          
+      # Set up .NET
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+          
+      # Build and publish the .NET app
+      - name: Build and publish
+        run: dotnet publish -c Release -o publish
+        
+      # Save Docker image as tar file
+      - name: Save Docker image as tar file
+        run: docker save ${{ env.DOCKER_IMAGE_NAME }}:latest | gzip > my-awesome-app.tar.gz
+
+      # Copy Docker image to remote machine
+      - name: Copy Docker image to remote machine
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.MACHINE_IP }}
+          username: ${{ secrets.MACHINE_USERNAME }}
+          password: ${{ secrets.MACHINE_PASSWORD }}
+          port: ${{ secrets.MACHINE_PORT }}
+          source: my-awesome-app.tar.gz
+          target: /tmp/my-awesome-app.tar.gz
+
+      # Load Docker image on remote machine (for Production)
+      - name: Load Docker image on remote machine
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.MACHINE_IP }}
+          username: ${{ secrets.MACHINE_USERNAME }}
+          password: ${{ secrets.MACHINE_PASSWORD }}
+          port: ${{ secrets.MACHINE_PORT }}
+          script: |
+            docker load < /tmp/my-awesome-app.tar.gz
+            docker stop my-awesome-app-production || true
+            docker rm my-awesome-app-production || true
+            docker run -d --restart=always --name=my-awesome-app-production -p 8001:80 ${{ env.DOCKER_IMAGE_NAME }}:latest
