--- a/src/SplitBackApi/Properties/launchSettings.json
+++ b/src/SplitBackApi/Properties/launchSettings.json
@@ -4,9 +4,9 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7014;http://localhost:5014",
+      "applicationUrl": "http://192.168.0.5:7014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
