--- a/.gitignore
+++ b/.gitignore
@@ -476,6 +476,12 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# .vscode directory
+.vscode/
+
+# .config directory
+.config/
+
 **/appsettings.Development.json
 **/appsettings.Staging.json
 **/appsettings.Production.json
